feat: взаимодействие с комментариями
